--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,3 @@
-MONGO = mongodb+srv://root:Star123war@cluster0.slgm3.mongodb.net/test
+MONGO = mongodb+srv://root:mynewpass123@cluster0.slgm3.mongodb.net/test
 PORT=5000
 NODE_ENV=development
